--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -147,6 +147,7 @@ body {
   color: var(--color-black);
   position: relative;
   height: 100%;
+  overflow-x: hidden;
 }
 
 input[type="email"],
